Fixed whitespace after footer

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,6 @@
 .App{
-  /* width: 100%; */
+  width: 100%;
+  min-height: 100vh;
   background: linear-gradient(to top,rgba(0, 0, 0, 0.5)50%, rgba(0, 0, 0, 0.5)50%), url("./assets/image.jpg");
   background-position: center;
   background-size: cover;
