--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,12 +1,13 @@
 .footer{
     display: flex;
     flex-direction: row;
+    margin-top: 5%;
     position: relative;
-    margin-top: 100%;
     background-color: rgb(10,4,22);
     bottom: 0 !important;
     padding-top: 10px !important;
-    padding-bottom: 8px !important;
+    margin-bottom: 0;
+    max-height: fit-content;
     
 }
 
@@ -18,6 +19,7 @@
     margin-left: 70vw;
     text-align: center !important;
     padding: 10px;
+    padding-bottom: 0;
   }
   
   
@@ -25,7 +27,7 @@
     font-size: 1em;
     color: rgba(255, 255, 255, 0.61) !important;
     margin-top: 0.5em !important;
-    margin-bottom: 0.5em !important;
+    /* margin-bottom: 0.5em !important; */
     padding-left: 10px;
     padding-right: 10px;
     text-underline-offset: 0;
