--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,6 +9,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(10,4,22);
 }
 
 code {
